--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,22 +14,26 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y \
-          build-essential \
-          git \
-          zip unzip \
-          openjdk-17-jdk \
-          python3-pip \
-          python3-setuptools \
-          python3-wheel \
-          libffi-dev \
-          libssl-dev \
-          zlib1g-dev
-
-        pip install --upgrade pip
-        pip install buildozer Cython
+  run: |
+    sudo apt update
+    
+    sudo apt install -y \
+      zip unzip \
+      openjdk-17-jdk \
+      python3-pip \
+      autoconf \
+      automake \
+      libtool \
+      pkg-config \
+      zlib1g-dev \
+      libncurses5 \
+      libncurses5-dev \
+      libtinfo5 \
+      cmake \
+      build-essential
+    
+    pip install --upgrade pip
+    pip install buildozer cython
 
     - name: Build APK
       run: |
