--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: Build APK
 
 on:
-  push:
   workflow_dispatch:
+  push:
 
 jobs:
   build:
@@ -10,31 +10,63 @@ jobs:
 
     steps:
 
+    # -----------------------------
+    # Checkout repository
+    # -----------------------------
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Install dependencies
-  run: |
-    sudo apt update
-    
-    sudo apt install -y \
-      zip unzip \
-      openjdk-17-jdk \
-      python3-pip \
-      autoconf \
-      automake \
-      libtool \
-      pkg-config \
-      zlib1g-dev \
-      libncurses5 \
-      libncurses5-dev \
-      libtinfo5 \
-      cmake \
-      build-essential
-    
-    pip install --upgrade pip
-    pip install buildozer cython
+    # -----------------------------
+    # Cache buildozer downloads (makes builds faster)
+    # -----------------------------
+    - name: Cache buildozer
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.buildozer
+          ~/.gradle
+        key: buildozer-${{ runner.os }}-${{ hashFiles('buildozer.spec') }}
 
-    - name: Build APK
+    # -----------------------------
+    # Install system dependencies
+    # -----------------------------
+    - name: Install Linux dependencies
+      run: |
+        sudo apt update
+
+        sudo apt install -y \
+          zip unzip \
+          git \
+          openjdk-17-jdk \
+          python3-pip \
+          autoconf \
+          automake \
+          libtool \
+          pkg-config \
+          zlib1g-dev \
+          libncurses5 \
+          libncurses5-dev \
+          libtinfo5 \
+          cmake \
+          build-essential \
+          libffi-dev \
+          libssl-dev
+
+        pip install --upgrade pip
+        pip install buildozer cython
+
+    # -----------------------------
+    # Build APK
+    # -----------------------------
+    - name: Build with Buildozer
       run: |
         buildozer android debug
+
+    # -----------------------------
+    # Upload APK artifact
+    # -----------------------------
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: BGMI-Skin-Tool
+        path: bin/*.apk
