--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,15 +10,9 @@ jobs:
 
     steps:
 
-    # -----------------------------
-    # Checkout repository
-    # -----------------------------
     - name: Checkout
       uses: actions/checkout@v3
 
-    # -----------------------------
-    # Cache buildozer downloads (makes builds faster)
-    # -----------------------------
     - name: Cache buildozer
       uses: actions/cache@v3
       with:
@@ -27,10 +21,7 @@ jobs:
           ~/.gradle
         key: buildozer-${{ runner.os }}-${{ hashFiles('buildozer.spec') }}
 
-    # -----------------------------
-    # Install system dependencies
-    # -----------------------------
-    - name: Install Linux dependencies
+    - name: Install dependencies
       run: |
         sudo apt update
 
@@ -55,18 +46,12 @@ jobs:
         pip install --upgrade pip
         pip install buildozer cython
 
-    # -----------------------------
-    # Build APK
-    # -----------------------------
-    - name: Build with Buildozer
+    - name: Build APK
       run: |
         buildozer android debug
 
-    # -----------------------------
-    # Upload APK artifact
-    # -----------------------------
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: BGMI-Skin-Tool
         path: bin/*.apk
