--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,50 +6,60 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
 
+    # ----------------------------
+    # Checkout repository
+    # ----------------------------
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
+    # ----------------------------
+    # Cache Buildozer files
+    # ----------------------------
     - name: Cache buildozer
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
           ~/.buildozer
           ~/.gradle
         key: buildozer-${{ runner.os }}-${{ hashFiles('buildozer.spec') }}
 
+    # ----------------------------
+    # Install dependencies
+    # ----------------------------
     - name: Install dependencies
       run: |
         sudo apt update
 
         sudo apt install -y \
-          zip unzip \
-          git \
+          git zip unzip \
           openjdk-17-jdk \
           python3-pip \
-          autoconf \
-          automake \
-          libtool \
+          autoconf automake libtool \
           pkg-config \
           zlib1g-dev \
-          libncurses5 \
-          libncurses5-dev \
-          libtinfo5 \
           cmake \
           build-essential \
           libffi-dev \
-          libssl-dev
+          libssl-dev \
+          libncurses-dev
 
         pip install --upgrade pip
         pip install buildozer cython
 
+    # ----------------------------
+    # Build APK
+    # ----------------------------
     - name: Build APK
       run: |
         buildozer android debug
 
+    # ----------------------------
+    # Upload APK
+    # ----------------------------
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
