--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,62 +6,20 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+
+    container:
+      image: kivy/buildozer:latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    # ----------------------------
-    # Checkout repository
-    # ----------------------------
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Build APK
+        run: buildozer android debug
 
-    # ----------------------------
-    # Cache Buildozer files
-    # ----------------------------
-    - name: Cache buildozer
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.buildozer
-          ~/.gradle
-        key: buildozer-${{ runner.os }}-${{ hashFiles('buildozer.spec') }}
-
-    # ----------------------------
-    # Install dependencies
-    # ----------------------------
-    - name: Install dependencies
-      run: |
-        sudo apt update
-
-        sudo apt install -y \
-          git zip unzip \
-          openjdk-17-jdk \
-          python3-pip \
-          autoconf automake libtool \
-          pkg-config \
-          zlib1g-dev \
-          cmake \
-          build-essential \
-          libffi-dev \
-          libssl-dev \
-          libncurses-dev
-
-        pip install --upgrade pip
-        pip install buildozer cython
-
-    # ----------------------------
-    # Build APK
-    # ----------------------------
-    - name: Build APK
-      run: |
-        buildozer android debug
-
-    # ----------------------------
-    # Upload APK
-    # ----------------------------
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: BGMI-Skin-Tool
-        path: bin/*.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: BGMI-Skin-Tool
+          path: bin/*.apk
