--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,14 @@ jobs:
       image: kivy/buildozer:latest
 
     steps:
-      - name: Checkout
+
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Build APK
-        run: buildozer android debug
+        run: |
+          export BUILDOZER_ALLOW_ROOT=1
+          buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
