--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,17 +8,41 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    container:
-      image: kivy/buildozer:latest
-
     steps:
-
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.10
+
+      - name: Install system dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            build-essential \
+            git \
+            zip \
+            unzip \
+            openjdk-17-jdk \
+            zlib1g-dev \
+            libncurses5 \
+            libstdc++6 \
+            libffi-dev \
+            libssl-dev
+
+      - name: Install python packages
+        run: |
+          pip install --upgrade pip
+          pip install buildozer cython virtualenv
+
+      - name: Initialize Buildozer
+        run: |
+          buildozer init || true
 
       - name: Build APK
         run: |
-          export BUILDOZER_ALLOW_ROOT=1
           buildozer android debug
 
       - name: Upload APK
